Refactor PMD ruleset and enhance Calendar functionality
- Update pmd-ruleset.xml to exclude ExcessiveImports for REST controllers.
- Refactor CalendarController to replace String.trim().isEmpty() with String.isBlank() for better readability and null checks.
- Modify CalendarEventRestController to utilize LocalDateTime for date handling, improving date manipulation and readability.
- Update PacienteController to compare LocalDate objects directly, enhancing clarity in date comparisons.
- Adjust BodyFatCalculatorService to improve readability by using underscores in floating-point literals.